# Arcana-Agent

./: README.md  agent_usage.md  authority_and_recording_design.md  tui_design.md
arcana_tui/: Cargo.toml
arcana_tui/src/: app.rs  banner.rs  cli.rs  composer.rs  config.rs  diff_panel.rs  event.rs  highlight.rs  instruction.rs  llm.rs  main.rs  onboard.rs  overlay.rs  panels.rs  render_md.rs  status_bar.rs  theme.rs  tui.rs  types.rs  viewport.rs
assets/: authority.toml
authority_and_recording/: Cargo.toml
authority_and_recording/src/: authority.rs  main.rs  prompt.rs  record.rs  server.rs  types.rs
doc/: agent_running_design.md  agent_usage.md  authority_and_recording_design.md  context_design.md  human_in_loop_design.md  tui_design.md
