[package]
name = "arcana-tui"
version = "0.1.0"
edition = "2024"
description = "Arcana Agent — Terminal User Interface"

[[bin]]
name = "arcana"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "2"
unicode-width = "0.2"
textwrap = "0.16"

# Syntax highlighting (tree-sitter)
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.23"

# Syntax highlighting (legacy, used by render_md)
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# Diff computation
similar = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# Compression for thinking blocks
zstd = "0.13"
